--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -9,6 +9,7 @@ grpcio==1.62.1
 h5py==3.10.0
 idna==3.6
 ImageHash==4.3.1
+iniconfig==2.0.0
 keras==3.1.1
 libclang==18.1.1
 Markdown==3.6
@@ -23,8 +24,11 @@ opt-einsum==3.3.0
 optree==0.11.0
 packaging==24.0
 pillow==10.3.0
+pluggy==1.4.0
 protobuf==4.25.3
 Pygments==2.17.2
+pytest==8.1.1
+pytest-mock==3.14.0
 PyWavelets==1.6.0
 requests==2.31.0
 rich==13.7.1
